--- a/timesheet_tmpl.rhtml
+++ b/timesheet_tmpl.rhtml
@@ -1,10 +1,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml"><head>
     <title><%= tsdata[:timesheet_title] %></title>
 
-    <link href="siteStyles.v1246369701.css" rel="stylesheet" type="text/css">
-    <link href="fbStyles.ve73feeee603708d08a0cfe86d5d9eb40.css" rel="stylesheet" type="text/css">
+    <link href="siteStyles.css" rel="stylesheet" type="text/css">
+    <link href="fbStyles.css" rel="stylesheet" type="text/css">
 
-    <link href="styles.v1247001976.css" rel="stylesheet" type="text/css">
+    <link href="styles.css" rel="stylesheet" type="text/css">
 
     <!--[if IE 6]><link rel="stylesheet" type="text/css" href="/cache/styles/ie6.v1244584144.css" /><![endif]-->
     <!--[if IE 7]><link rel="stylesheet" type="text/css" href="/cache/styles/ie7.v1244584144.css" /><![endif]-->
@@ -17,6 +17,35 @@
       <!-- FIXME: Ugly hack -->
       <%= tsdata[:customer_html_logo] %>
     </center>
+
+    <br />
+    <br />
+
+    <table  cellpadding="0" cellspacing="5" width="100%" style="margin-left: 0pt; position: static; z-index: auto; background-color: rgb(217, 217, 217); ">
+      <tbody>
+        <tr align="left">
+          <td align="right"><b>Name:</b></td>
+          <td>&nbsp;</td>
+          <td align="left"><%= tsdata[:name] %></td>
+        </tr>
+        <tr>
+          <td align="right"><b>Company:</b></td>
+          <td>&nbsp;</td>
+          <td align="left"><%= tsdata[:mycompany] %></td>
+        </tr>
+        <tr>
+          <td align="right"><b>Phone:</b></td>
+          <td>&nbsp;</td>
+          <td align="left"><%= tsdata[:myphone] %></td>
+        </tr>
+        <tr>
+          <td align="right"><b>Email:</b></td>
+          <td>&nbsp;</td>
+          <td align="left"><%= tsdata[:myemail] %></td>
+        </tr>
+      </tbody>
+    </table>
+    <br />
 
     <table border="0" align="center" cellpadding="0" cellspacing="0" style="position: static; z-index: auto; ">
       <tbody>
@@ -35,7 +64,8 @@
           <td colspan="11"></td></tr><tr><td height="5" colspan="11"></td>
         </tr>
 
-        <% tsdata[:weeksheets].each do |range,timesheet| %>
+        <% tsdata[:weeksheets].keys.sort.each do |range| %> 
+          <% timesheet = tsdata[:weeksheets][range] %>
           <% week_start = range[0] %><% week_end = range[1] %><% weekly_total = timesheet[:weekly_total] %>
 
           <tr height="15">
@@ -49,7 +79,6 @@
             <% entries.each do |hours,project,note| %>
               <% if dateshown %>
                 <!-- All other entries for the day -->
-                <%# [project,note,hours].inspect %>
                 <tr>
                   <td height="1" colspan="2"></td>
                   <td height="1" colspan="7" bgcolor="#cccccc"></td>
@@ -60,7 +89,7 @@
                   <td><%= project %></td>
                   <td><%= note %></td>
                   <td>&nbsp;</td>
-                  <td colspan="4" align="right"><%= hours %></td>
+                  <td colspan="4" align="right"><%= format("%.2f", hours) %></td>
                 </tr>
               <% else %>
                 <!-- SHOW THIS FIRST for each day-->
@@ -78,7 +107,7 @@
                   <td><%= project %></td>
                   <td><%= note %></td>
                   <td>&nbsp;</td>
-                  <td colspan="4" align="right"><%= hours %></td>
+                  <td colspan="4" align="right"><%= format("%.2f", hours) %></td>
                 </tr>
               <% end %>
             <% end %>
@@ -88,9 +117,9 @@
             <td height="1" colspan="10" bgcolor="#000000"></td>
           </tr>
           <tr>
-            <td colspan="5">&nbsp;</td>
-            <td colspan="2" align="right"><strong>Week Total:</strong></td>
-            <td colspan="4" align="right"><strong><%= weekly_total %></strong></td>
+            <td colspan="4">&nbsp;</td>
+            <td colspan="3" align="left"><strong>Week Total:</strong></td>
+            <td colspan="4" align="right"><strong><%= format("%.2f", weekly_total) %></strong></td>
             <td>&nbsp;</td>
           </tr>
           <tr><td height="10" colspan="3"></td></tr>
@@ -101,8 +130,8 @@
         </tr>
         <tr>
           <td colspan="5">&nbsp;</td>
-          <td colspan="2" align="right"><strong>Time Period Total:</strong></td>
-          <td colspan="4" align="right"><strong><%= tsdata[:totalhours] %></strong></td>
+          <td colspan="2" align="right"><strong>Time&nbsp;Period&nbsp;Total:</strong>&nbsp;&nbsp;</td>
+          <td colspan="4" align="right"><strong><%= format("%.2f", tsdata[:totalhours]) %></strong></td>
           <td>&nbsp;</td>
         </tr>
         <tr><td height="50" colspan="3"></td></tr>
