--- a/templates/timesheet_tmpl.rhtml
+++ b/templates/timesheet_tmpl.rhtml
@@ -1,5 +1,5 @@
 <html xmlns="http://www.w3.org/1999/xhtml"><head>
-    <title><%= tsdata[:timesheet_title] %></title>
+    <title><%= @tsdata[:timesheet_title] %></title>
 
     <link href="siteStyles.css" rel="stylesheet" type="text/css">
     <link href="fbStyles.css" rel="stylesheet" type="text/css">
@@ -16,7 +16,7 @@
     <center>
       <h2>
         <!-- FIXME: Ugly hack -->
-        <%= tsdata[:customer_html_logo] %>
+        <%= @tsdata[:customer_html_logo] %>
       </h2>
     </center>
 
@@ -28,22 +28,22 @@
         <tr align="left">
           <td align="right"><b>Name:</b></td>
           <td>&nbsp;</td>
-          <td align="left"><%= tsdata[:name] %></td>
+          <td align="left"><%= @tsdata[:name] %></td>
         </tr>
         <tr>
           <td align="right"><b>Company:</b></td>
           <td>&nbsp;</td>
-          <td align="left"><%= tsdata[:mycompany] %></td>
+          <td align="left"><%= @tsdata[:mycompany] %></td>
         </tr>
         <tr>
           <td align="right"><b>Phone:</b></td>
           <td>&nbsp;</td>
-          <td align="left"><%= tsdata[:myphone] %></td>
+          <td align="left"><%= @tsdata[:myphone] %></td>
         </tr>
         <tr>
           <td align="right"><b>Email:</b></td>
           <td>&nbsp;</td>
-          <td align="left"><%= tsdata[:myemail] %></td>
+          <td align="left"><%= @tsdata[:myemail] %></td>
         </tr>
       </tbody>
     </table>
@@ -52,7 +52,7 @@
     <table border="0" align="center" cellpadding="0" cellspacing="0" style="position: static; z-index: auto; ">
       <tbody>
         <tr class="white bg_systemcolor1">
-          <th colspan="12" bgcolor="#666666" align="center"><%= tsdata[:timesheet_title] %></th>
+          <th colspan="12" bgcolor="#666666" align="center"><%= @tsdata[:timesheet_title] %></th>
         </tr>
         <tr><td height="30" colspan="3"></td></tr>
         <tr class="white bg_systemcolor1">
@@ -66,8 +66,8 @@
           <td colspan="11"></td></tr><tr><td height="5" colspan="11"></td>
         </tr>
 
-        <% tsdata[:weeksheets].keys.sort.each do |range| %> 
-          <% timesheet = tsdata[:weeksheets][range] %>
+        <% @tsdata[:weeksheets].keys.sort.each do |range| %>
+          <% timesheet = @tsdata[:weeksheets][range] %>
           <% week_start = range[0] %><% week_end = range[1] %><% weekly_total = timesheet[:weekly_total] %>
 
           <tr height="15">
@@ -135,7 +135,7 @@
         <tr>
           <td colspan="5">&nbsp;</td>
           <td colspan="2" align="right"><strong>Time&nbsp;Period&nbsp;Total:</strong>&nbsp;&nbsp;</td>
-          <td colspan="4" align="right"><strong><%= format("%.2f", tsdata[:totalhours]) %></strong></td>
+          <td colspan="4" align="right"><strong><%= format("%.2f", @tsdata[:totalhours]) %></strong></td>
           <td>&nbsp;</td>
         </tr>
         <tr><td height="50" colspan="3"></td></tr>
